--- a/style.css
+++ b/style.css
@@ -101,3 +101,36 @@ li .circle.delete::before {
     border: 1px solid #ff0000;
     color: #ff0000;
 }
+
+.circle-list {
+    border-radius: 50px;
+    font-size: 10px;
+    padding: 5px;
+    color: white;
+}
+
+/*Color of list*/
+
+.pink-color {
+    background-color: pink;
+}
+
+.heavenly-color {
+    background-color: #00ACEC;
+}
+
+.green-color {
+    background-color: rgb(59, 145, 59);
+}
+
+.orange-color {
+    background-color: orange;
+}
+
+.purple-color {
+    background-color: rgb(233, 55, 218);
+}
+
+.yellow-color {
+    background-color: rgb(218, 221, 50);
+}
